K8S/media-app-np-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-app-np-svc
spec:
  type: NodePort
  selector:
    app: media-app-service
  ports:
    - name: media-app-service
      protocol: TCP
      port: 80
      targetPort: 80
