K8S/rabbitmq-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management-alpine
          ports:
            - name: rabbitmq-msg-port
              containerPort: 5672
            - name: rabbitmq-mgmt-port
              containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-mgmt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
