K8S/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: media-app-clusterip-svc
                port:
                  number: 80
          - path: /api/v1/posts
            pathType: Prefix
            backend:
              service:
                name: media-app-clusterip-svc
                port:
                  number: 80
          - path: /api/v1/comments
            pathType: Prefix
            backend:
              service:
                name: media-app-clusterip-svc
                port:
                  number: 80
